--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="topical_forest">#00473B</color>
+    <color name="light_topical_forest">#E0F2F1</color>
+    <color name="medium_gray">#8A8A8A</color>
+    <color name="wallet_card_background">#C8E6C9</color>
 </resources>
