--- a/app/src/main/res/layout/activity_farmer_dashboard.xml
+++ b/app/src/main/res/layout/activity_farmer_dashboard.xml
@@ -146,7 +146,7 @@
                         android:layout_height="wrap_content"
                         android:layout_below="@id/divider"
                         android:layout_marginTop="16dp"
-                        android:text=""
+                        android:text="Today's Income:"
                         android:textColor="@android:color/black" />
 
                     <TextView
@@ -156,7 +156,7 @@
                         android:layout_below="@id/divider"
                         android:layout_alignParentEnd="true"
                         android:layout_marginTop="16dp"
-                        android:text="@string/sales_amount"
+                        android:text=""
                         android:textColor="@android:color/black"
                         android:textStyle="bold" />
 
