--- a/app/src/main/res/layout/activity_farmer_dashboard.xml
+++ b/app/src/main/res/layout/activity_farmer_dashboard.xml
@@ -33,7 +33,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="@string/good_morning"
+                        android:text=""
                         android:textColor="#FFFFFF"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -125,7 +125,7 @@
                         android:textSize="24sp"
                         android:textStyle="bold" />
 
-                    <ImageView
+                    <Imag1eView
                         android:id="@+id/ivVisibility"
                         android:layout_width="24dp"
                         android:layout_height="24dp"
