--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -69,8 +69,8 @@
                             android:id="@+id/ivProfileImage"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:scaleType="centerCrop"
-                            android:src="@drawable/pp_placeholder" />
+                            android:scaleType="centerCrop"/>
+<!--                            android:src="@drawable/pp_placeholder" -->
                     </androidx.cardview.widget.CardView>
 
                     <TextView
